@@ -2,7 +2,7 @@
 package java.lang;
 
 /*******************************************************************************
- * Copyright (c) 1998, 2018 IBM Corp. and others
+ * Copyright (c) 1998, 2019 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -36,14 +36,10 @@ import jdk.internal.misc.Unsafe;
 import jdk.internal.access.SharedSecrets;
 /*[ELSE]
 import jdk.internal.misc.SharedSecrets;
-/*[ENDIF]*/
+/*[ENDIF] Java12 */
 import jdk.internal.misc.VM;
 import java.lang.StackWalker.Option;
-/*[IF Sidecar19-SE-OpenJ9]
 import java.lang.Module;
-/*[ELSE]
-import java.lang.reflect.Module;
-/*[ENDIF]*/
 import jdk.internal.reflect.Reflection;
 import jdk.internal.reflect.CallerSensitive;
 import java.util.*;
@@ -106,11 +102,7 @@ public final class System {
 	private static String osEncoding;
 
 /*[IF Sidecar19-SE]*/
-/*[IF Sidecar19-SE-OpenJ9]
 	static java.lang.ModuleLayer	bootLayer;
-/*[ELSE]*/
-	static java.lang.reflect.Layer	bootLayer;
-/*[ENDIF]*/
 /*[ENDIF]*/
 	
 	// Initialize all the slots in System on first use.
@@ -149,16 +141,10 @@ public final class System {
 		}
 
 		// Fill in the properties from the VM information.
-		ensureProperties();
+		ensureProperties(true);
 
 		/*[PR CMVC 150472] sun.misc.SharedSecrets needs access to java.lang. */
 		SharedSecrets.setJavaLangAccess(new Access());
-
-		/*[PR CMVC 179976] System.setProperties(null) throws IllegalStateException */
-		try {
-			VM.saveAndRemoveProperties(systemProperties);
-		} catch (NoSuchMethodError e) {
-		}
 		
 		/*[REM] Initialize the JITHelpers needed in J9VMInternals since the class can't do it itself */
 		try {
@@ -370,25 +356,32 @@ private static native Properties initProperties(Properties props);
  * provided by the virtual machine.
  */
 @SuppressWarnings("nls")
-private static void ensureProperties() {
+private static void ensureProperties(boolean isInitialization) {
 /*[IF OpenJ9-RawBuild]*/
 	// invoke JCL native to initialize platform encoding
 	initProperties(new Properties());
 /*[ENDIF] OpenJ9-RawBuild */
 	
-	systemProperties = new Properties();
+/*[IF Java12]*/
+	Map<String, String> initializedProperties = new Hashtable<String, String>();
+/*[ELSE]
+	Properties initializedProperties = new Properties();
+/*[ENDIF] Java12 */
 
 	if (osEncoding != null) {
-		systemProperties.put("os.encoding", osEncoding); //$NON-NLS-1$
+		initializedProperties.put("os.encoding", osEncoding); //$NON-NLS-1$
 	}
 	/*[PR The launcher apparently needs sun.jnu.encoding property or it does not work]*/
-	systemProperties.put("ibm.system.encoding", platformEncoding); //$NON-NLS-1$
-	systemProperties.put("sun.jnu.encoding", platformEncoding); //$NON-NLS-1$
-	systemProperties.put("file.encoding", fileEncoding); //$NON-NLS-1$
-	systemProperties.put("file.encoding.pkg", "sun.io"); //$NON-NLS-1$ //$NON-NLS-2$
-	systemProperties.put("java.specification.vendor", "Oracle Corporation"); //$NON-NLS-1$ //$NON-NLS-2$
-	systemProperties.put("java.specification.name", "Java Platform API Specification"); //$NON-NLS-1$ //$NON-NLS-2$
-	systemProperties.put("com.ibm.oti.configuration", "scar"); //$NON-NLS-1$
+	initializedProperties.put("ibm.system.encoding", platformEncoding); //$NON-NLS-1$
+	initializedProperties.put("sun.jnu.encoding", platformEncoding); //$NON-NLS-1$
+	initializedProperties.put("file.encoding", fileEncoding); //$NON-NLS-1$
+	initializedProperties.put("file.encoding.pkg", "sun.io"); //$NON-NLS-1$ //$NON-NLS-2$
+	/*[IF !Java12]*/
+	/* System property java.specification.vendor is set via VersionProps.init(systemProperties) since JDK12 */
+	initializedProperties.put("java.specification.vendor", "Oracle Corporation"); //$NON-NLS-1$ //$NON-NLS-2$
+	/*[ENDIF] !Java12 */
+	initializedProperties.put("java.specification.name", "Java Platform API Specification"); //$NON-NLS-1$ //$NON-NLS-2$
+	initializedProperties.put("com.ibm.oti.configuration", "scar"); //$NON-NLS-1$
 
 	String[] list = getPropertyList();
 	for (int i = 0; i < list.length; i += 2) {
@@ -397,41 +390,84 @@ private static void ensureProperties() {
 		if (key == null) {
 			break;
 		}
-		systemProperties.put(key, list[i+1]);
+		initializedProperties.put(key, list[i+1]);
 	}
 	
+	/* java.lang.VersionProps.init() eventually calls into System.setProperty() where propertiesInitialized needs to be true */
 	propertiesInitialized = true;
-	
-	/*[IF Java12]*/
-	/* java.lang.VersionProps.init() eventually calls into System.setProperty() where propertiesInitialized needs to be true */
-	java.lang.VersionProps.init(systemProperties);
-	/*[ELSE]
-	/*[IF Sidecar19-SE]*/
-	/* java.lang.VersionProps.init() eventually calls into System.setProperty() where propertiesInitialized needs to be true */
-	java.lang.VersionProps.init();
-	/*[ELSE]*/
-	sun.misc.Version.init();
-	/*[ENDIF] Sidecar19-SE */
-	/*[ENDIF] Java12 */
 
-	/*[IF !Sidecar19-SE]*/
+/*[IF Java12]*/
+	java.lang.VersionProps.init(initializedProperties);
+	/* VersionProps.init(systemProperties) above sets java.specification.version value which is used to set java.vm.specification.version. */
+	initializedProperties.put("java.vm.specification.version", initializedProperties.get("java.specification.version")); //$NON-NLS-1$ //$NON-NLS-2$
+	initializedProperties.put("java.vm.vendor", initializedProperties.get("java.vendor")); //$NON-NLS-1$ //$NON-NLS-2$
+/*[ELSE]
+	/* VersionProps.init requires systemProperties to be set */
+	systemProperties = initializedProperties;
+
+/*[IF Sidecar19-SE]*/
+	java.lang.VersionProps.init();
+/*[ELSE]
+	sun.misc.Version.init();
+
 	StringBuffer.initFromSystemProperties(systemProperties);
 	StringBuilder.initFromSystemProperties(systemProperties);
-	/*[ENDIF]*/
+/*[ENDIF] Sidecar19-SE */
+/*[ENDIF] Java12 */
 
-	String javaRuntimeVersion = systemProperties.getProperty("java.runtime.version"); //$NON-NLS-1$
+/*[IF Java12]*/
+	String javaRuntimeVersion = initializedProperties.get("java.runtime.version"); //$NON-NLS-1$
+/*[ELSE]
+	String javaRuntimeVersion = initializedProperties.getProperty("java.runtime.version"); //$NON-NLS-1$
+/*[ENDIF] Java12 */
 	if (null != javaRuntimeVersion) {
-		String fullVersion = systemProperties.getProperty("java.fullversion"); //$NON-NLS-1$
+	/*[IF Java12]*/
+		String fullVersion = initializedProperties.get("java.fullversion"); //$NON-NLS-1$
+	/*[ELSE]
+		String fullVersion = initializedProperties.getProperty("java.fullversion"); //$NON-NLS-1$
+	/*[ENDIF] Java12 */
 		if (null != fullVersion) {
-			systemProperties.put("java.fullversion", (javaRuntimeVersion + "\n" + fullVersion)); //$NON-NLS-1$ //$NON-NLS-2$
+			initializedProperties.put("java.fullversion", (javaRuntimeVersion + "\n" + fullVersion)); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 		rasInitializeVersion(javaRuntimeVersion);
 	}
 
-	lineSeparator = systemProperties.getProperty("line.separator", "\n"); //$NON-NLS-1$
+/*[IF Java12]*/
+	lineSeparator = initializedProperties.getOrDefault("line.separator", "\n"); //$NON-NLS-1$
+/*[ELSE]
+	lineSeparator = initializedProperties.getProperty("line.separator", "\n"); //$NON-NLS-1$
+/*[ENDIF] Java12 */
 	/*[IF Sidecar19-SE]*/
-	useLegacyVerPresents = systemProperties.containsKey("use.legacy.version");
+	useLegacyVerPresents = initializedProperties.containsKey("use.legacy.version");
 	/*[ENDIF]*/
+
+	if (isInitialization) {
+		/*[PR CMVC 179976] System.setProperties(null) throws IllegalStateException */
+		/*[IF Java12]*/
+		VM.saveProperties(initializedProperties);
+		/*[ELSE]
+		VM.saveAndRemoveProperties(initializedProperties);
+		/*[ENDIF] Java12 */
+	}
+
+	/* create systemProperties from properties Map */
+/*[IF Java12]*/
+	initializeSystemProperties(initializedProperties);
+/*[ELSE]
+	systemProperties = initializedProperties;
+/*[ENDIF] Java12 */
+}
+
+/* Converts a Map<String, String> to a properties object.
+ * 
+ * The sytem properties will be initialized as a Map<String, String> type to be compatible
+ * with jdk.internal.misc.VM and java.lang.VersionProps APIs.
+ */
+private static void initializeSystemProperties(Map<String, String> mapProperties) {
+	systemProperties = new Properties();
+	for (Map.Entry<String, String> property : mapProperties.entrySet()) {
+		systemProperties.put(property.getKey(), property.getValue());
+	}
 }
 
 private static native void rasInitializeVersion(String javaRuntimeVersion);
@@ -515,12 +551,14 @@ static Properties internalGetProperties() {
  * The properties currently provided by the virtual
  * machine are:
  * <pre>
+/*[IF !Java12]
+ *     java.vendor
  *     java.vendor.url
+ /*[ENDIF] Java12
  *     java.class.path
  *     user.home
  *     java.class.version
  *     os.version
- *     java.vendor
  *     user.dir
  *     user.timezone
  *     path.separator
@@ -731,7 +769,7 @@ public static void setProperties(Properties p) {
 	if (security != null)
 		security.checkPropertiesAccess();
 	if (p == null) {
-		ensureProperties();
+		ensureProperties(false);
 	} else {
 		systemProperties = p;
 	}
@@ -745,13 +783,23 @@ public static void setProperties(Properties p) {
  *
  * @param		s			the new security manager
  * 
- * @throws		SecurityException 	if the security manager has already been set.
+ * @throws		SecurityException 	if the security manager has already been set and its checkPermission method doesn't allow it to be replaced.
+ /*[IF Java12]
+ * @throws		UnsupportedOperationException 	if s is non-null and a special token "disallow" has been set for system property "java.security.manager"
+ * 												which indicates that a security manager is not allowed to be set dynamically.
+ /*[ENDIF] Java12
  */
 public static void setSecurityManager(final SecurityManager s) {
 	/*[PR 113606] security field could be modified by another Thread */
 	final SecurityManager currentSecurity = security;
 	
 	if (s != null) {
+		/*[IF Java12]*/
+		if ("disallow".equals(systemProperties.getProperty("java.security.manager"))) { //$NON-NLS-1$ //$NON-NLS-2$
+			/*[MSG "K0B00", "`-Djava.security.manager=disallow` has been specified"]*/
+			throw new UnsupportedOperationException(com.ibm.oti.util.Msg.getString("K0B00")); //$NON-NLS-1$
+		}
+		/*[ENDIF] Java12 */
 		if (currentSecurity == null) {
 			// only preload classes when current security manager is null
 			// not adding an extra static field to preload only once
